<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
  	  <groupId>com.swiftmq</groupId>
	  <artifactId>swiftmq-ce</artifactId>
    <version>13.0.0</version>
      <relativePath>../../pom.xml</relativePath>
  </parent>

  <groupId>com.swiftmq.swiftlets</groupId>
  <artifactId>sys_routing</artifactId>
  <version>13.0.0</version>

  <dependencies>
    <dependency>
      <groupId>com.swiftmq</groupId>
      <artifactId>swiftmq-client</artifactId>
      <version>13.0.0</version>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>